feat(dialog):avatar triggers dialog

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="trl" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/icon.svg" />
@@ -202,7 +202,6 @@
                 target="_blank"
                 >@assadanabosi</a
               >
-              <FooterHoverCard />
             </p>
           </footer>
         </div>
