--- a/client/index.html
+++ b/client/index.html
@@ -163,28 +163,22 @@
             <div class="noscript9">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="48"
-                height="48"
+                width="256"
+                height="256"
                 viewBox="0 0 24 24"
                 fill="none"
                 stroke="currentColor"
-                stroke-width="2"
+                stroke-width="0.9375"
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                class="lucide lucide-unlink"
+                class="lucide lucide-file-code-2"
               >
-                <path
-                  d="m18.84 12.25 1.72-1.71h-.02a5.004 5.004 0 0 0-.12-7.07 5.006 5.006 0 0 0-6.95 0l-1.72 1.71"
-                />
-                <path
-                  d="m5.17 11.75-1.71 1.71a5.004 5.004 0 0 0 .12 7.07 5.006 5.006 0 0 0 6.95 0l1.71-1.71"
-                />
-                <line x1="8" x2="8" y1="2" y2="5" />
-                <line x1="2" x2="5" y1="8" y2="8" />
-                <line x1="16" x2="16" y1="19" y2="22" />
-                <line x1="19" x2="22" y1="16" y2="16" />
+                <path d="M4 22h14a2 2 0 0 0 2-2V7.5L14.5 2H6a2 2 0 0 0-2 2v4" />
+                <polyline points="14 2 14 8 20 8" />
+                <path d="m9 18 3-3-3-3" />
+                <path d="m5 12-3 3 3 3" />
               </svg>
-              <p class="noscript10">error</p>
+              <p class="noscript10">warning</p>
               <p class="noscript11">
                 You need to enable JavaScript to run this app.
               </p>
