feat(offline):page when offline

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,8 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/favicon192.png" />
+    <link rel="stylesheet" crossorigin href="/noscript.css" />
+
     <style>
       html {
         background-color: hsl(0 0% 3.9%);
