--- a/client/index.html
+++ b/client/index.html
@@ -3,16 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Al-Anabosi</title>
     <meta
       name="description"
       content="Al-Anabosi Workshop Management Dashboard"
     />
-    <meta name="theme-color" content="hsla(0, 72.2%, 50.6%, 0.3)" />
+    <meta
+      name="keywords"
+      content="Al-Anabosi, Workshop, Management, Dashboard"
+    />
+
+    <meta name="theme-color" content="hsl(0, 72.2%, 50.6%)" />
+
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/favicon192.png" />
-    <link rel="stylesheet" crossorigin href="/noscript.css" />
+
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/icons/icon-144x144.png"
+    />
+    <link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png" />
+
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta name="apple-mobile-web-app-title" content="Al-Anabosi" />
+
+    <title>Al-Anabosi</title>
 
     <style>
       html {
@@ -136,7 +157,7 @@
     </style>
   </head>
 
-  <body>
+  <body class="bg-background">
     <div id="root"></div>
     <noscript>
       <div class="noscript1">
