--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
       content="Al-Anabosi, Workshop, Management, Dashboard"
     />
 
-    <meta name="theme-color" content="hsl(0, 72.2%, 50.6%)" />
+    <meta name="theme-color" content="hsl(0, 0%, 3.9%)" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" />
@@ -27,10 +27,7 @@
 
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Al-Anabosi" />
 
     <title>Al-Anabosi</title>
@@ -38,6 +35,11 @@
     <style>
       html {
         background-color: hsl(0 0% 3.9%);
+      }
+      /* pull to refresh */
+      div[class^="ptr--"],
+      div[class*=" ptr--"] {
+        color: hsl(var(--primary));
       }
 
       .noscript1 {
