feat(title):make title an env var

--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Al-Anabosi Workshop Management Dashboard"
+      content="%VITE_APP_TITLE% Workshop Management Dashboard"
     />
     <meta
       name="keywords"
-      content="Al-Anabosi, Workshop, Management, Dashboard"
+      content="%VITE_APP_TITLE%, Workshop, Management, Dashboard"
     />
 
     <meta name="theme-color" content="hsl(0, 0%, 3.9%)" />
@@ -28,9 +28,9 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="apple-mobile-web-app-title" content="Al-Anabosi" />
+    <meta name="apple-mobile-web-app-title" content="%VITE_APP_TITLE%" />
 
-    <title>Al-Anabosi</title>
+    <title>%VITE_APP_TITLE%</title>
 
     <style>
       html {
